--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "library",
     "authors": [
         {
-            "name": "Muhammad Ferly Ogianta",
-            "email": "mfogianta@gmail.com"
+            "name": "xxxx",
+            "email": "xxx@xx.com"
         }
     ],
     "require": {
